force-app/main/default/objects/dfsle__EnvelopeConfigurationDocument__c/dfsle__EnvelopeConfigurationDocument__c.object-meta.xml
<CustomObject>
    <label>Docusign Envelope Configuration Document</label>
    <nameField>
        <displayFormat>DEC-{0000000}</displayFormat>
        <label>Document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign Envelope Configuration Document</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>