force-app/main/default/objects/dfsle__EnvelopeConfigurationDocument__c/fields/dfsle__Filter__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Filter__c</fullName>
    <description>Source file filter</description>
    <label>Source file filter</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>