force-app/main/default/objects/dfsle__EnvelopeConfigurationDocument__c/fields/dfsle__Type__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Type__c</fullName>
    <description>Document Type</description>
    <inlineHelpText>Document Type</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TemplateDocument</fullName>
                <label>Template Document</label>
            </value>
            <value>
                <fullName>SourceFiles</fullName>
                <label>Source Files</label>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>